# oneshot

./: 1shot.sh  Cargo.toml  README.md  TODO.md  containers.toml  podshot
.devcontainer/: devcontainer.json
examples/: python-shell.1sh
src/: container.rs  main.rs
src/container/: podman.rs
